SpiderData/csdn/Clean/03894.txt
为什么我在python里某一行写print('123')，它会弹出这个错误？
 File "C:\Documents and Settings\Administrator\桌面\test.py", line 2
 8
 print('123')
 ^
 IndentationError: unexpected unindent

后来发现是缩进问题！！！python依靠indent来缩进。要么全部用空格缩进，要么全部tab键，所以我觉得你的问题是可能缩进有问题。用有些编辑器可以显示tab和空格的。另外，最好不要放到带中文的目录下，防止出问题。

